# interp_dev_

./: .gitignore  README.md  all.txt  pyproject.toml  temp.txt
Project Management/: Report.md  Tasks.md  cca_dev.md  embeddings_dataset.md  extract_embeddings.md  metrics.md  preprocess.md  run_evaluate.md  train.md  train_models.md  Предолжения.md
Project Management/.obsidian/: workspace.json
data/processed/: dev_cps.csv  test_cps.csv
datasets/: __init__.py  embeddings_dataset.py
interpretability_scripts/: embedding_analysis.py  extract_embeddings.py
models/: probing_model.py  regression_model.pt  train.py  train_models.py
report/: Report.md  Отчет.docx
report/HTML report/: metrics.txt  predictions.csv
report/HTML report/cca/: cca_dev_cps.csv
report/HTML report/cca/voxblink2_samresnet34/: cca_dev_cps_voxblink2_samresnet34.csv
report/HTML report/cca/voxblink2_samresnet34_ft/: cca_dev_cps_voxblink2_samresnet34_ft.csv
results_1/: report.html
src/: cca_10_10.py  cca_analysis.py  cca_dev.py  preprocess.py  run_all_cca.py  run_evaluate.py
utils/: embeddings.py  extract_features.py  layers.py  metrics.py
