[tool.poetry]
name = "pp-past"
version = "0.1.0"
description = ""
authors = ["NikiZ83 <nikita.zh83@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
librosa = "^0.11.0"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
