[tool.poetry]
name = "pp-past"
version = "0.1.0"
description = ""
authors = ["NikiZ83 <nikita.zh83@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
librosa = "^0.11.0"
pandas = "^2.3.3"
tqdm = "^4.67.1"
wespeaker = {git = "https://github.com/wenet-e2e/wespeaker.git"}
chromadb = "^1.2.1"
matplotlib = "^3.10.7"
cca-zoo = "^2.6.0"
seaborn = "^0.13.2"
psutil = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
